compiler/src/test/resources/golden/errors/pat_refutable_let.dawn
fn f(o: Option[Int]) -> Int = {
  let Some(x) = o
  x
}
