compiler/src/test/resources/golden/errors/pat_refutable_let.err
error: this pattern does not always match, so it cannot be used in a let
  --> pat_refutable_let.dawn:2:7
  |
2 |   let Some(x) = o
  |       ^^^^^^^
  = hint: use match to handle the other cases
